# TutorialCpp

./: CMakeLists.txt  demo_cv.cpp  demo_grabber.cpp  demo_qvisualizer.cpp  main.cpp
include/Defs/: defs.h
include/Grabber/: grabber.h  kinect_grabber.h  xtion_grabber.h
include/Utilities/: observer.h
include/Visualizer/: Qvisualizer.h  visualizer.h  visualizerGL.h
resources/: KinectModel.xml  configGlobal.xml  visualizerConfig.xml
src/Grabber/: kinect_grabber.cpp  xtion_grabber.cpp
src/Utilities/: observer.cpp
src/Visualizer/: Qvisualizer.cpp  visualizerGL.cpp
